--- a/index.html
+++ b/index.html
@@ -67,11 +67,9 @@
 <div class="splide">
     <div class="splide__track">
         <ul class="splide__list">
-            <li class="splide__slide"> <img src="pic/lighting.jpg" ></li>
-            <li class="splide__slide"><img src="pic/flags.jpg"></li>
+            <li class="splide__slide"> <img src="pic/main.jpg" ></li>
             <li class="splide__slide"><img src="pic/hall.jpg"></li>
-            <li class="splide__slide"><img src="pic/heart.jpg"></li>
-            <li class="splide__slide"><img src="pic/mandap.jpg"></li>
+            <li class="splide__slide"><img src="pic/lighting.jpg"></li>
             <li class="splide__slide"><img src="pic/pond.PNG"></li>
             <li class="splide__slide"><img src="pic/tree.jpg"></li>
             <li class="splide__slide"><img src="pic/openhall.jpg"></li>
