--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <div class="splide">
     <div class="splide__track">
         <ul class="splide__list">
-            <li class="splide__slide"> <img src="pic/main.jpg" ></li>
+            <li class="splide__slide"> <img src="pic/main.jpeg" ></li>
             <li class="splide__slide"><img src="pic/hall.jpg"></li>
             <li class="splide__slide"><img src="pic/lighting.jpg"></li>
             <li class="splide__slide"><img src="pic/pond.PNG"></li>
