--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
 <div class="splide">
     <div class="splide__track">
         <ul class="splide__list">
-            <li class="splide__slide"> <img src="pic/main.png" ></li>
+           <li class="splide__slide" > 
+              <img src="pic/main2.jpeg" class="image1"/>
+              <img src="pic/mobilemain.png" class="image2"/>
+              </li>
             <li class="splide__slide"><img src="pic/hall.jpg"></li>
             <li class="splide__slide"><img src="pic/lighting.jpg"></li>
             <li class="splide__slide"><img src="pic/pond.PNG"></li>
