--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="splide__track">
         <ul class="splide__list">
            <li class="splide__slide" > 
-              <img src="pic/main2.jpeg" class="image1"/>
+              <img src="pic/main.png" class="image1"/>
               <img src="pic/mobilemain.png" class="image2"/>
               </li>
             <li class="splide__slide"><img src="pic/hall.jpg"></li>
