--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <ul class="splide__list">
            <li class="splide__slide" > 
               <img src="pic/main.png" class="image1"/>
-              <img src="pic/mobilemain.jpeg" class="image2"/>
+              <img src="pic/mobilemain.png" class="image2"/>
               </li>
             <li class="splide__slide"><img src="pic/hall.jpg"></li>
             <li class="splide__slide"><img src="pic/lighting.jpg"></li>
